[gd_scene load_steps=6 format=3 uid="uid://brsep0cjwxvvu"]

[ext_resource type="Texture2D" uid="uid://bgsyb6lccmad6" path="res://Assets/bpmn/gateways/AND_Gateway.png" id="1_o12no"]
[ext_resource type="Script" uid="uid://c3jiaarjt486r" path="res://Assets/bpmn/gateways/GatewayNode2D.gd" id="2_i4fo5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t46qg"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xldx8"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bu7s8"]
radius = 2.0

[node name="GatewayNode2d" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("2_i4fo5")
element_name = "Essen im KÃ¼hlschrank?"
element_output1 = ""
element_output2 = ""
gateway_type = 2

[node name="GatewayLogo" type="Sprite2D" parent="."]
texture = ExtResource("1_o12no")

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -142.0
offset_right = 35.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="OutputX" type="Line2D" parent="."]
position = Vector2(90, 0)
scale = Vector2(0.04426641, 0.37888637)
points = PackedVector2Array(95, 0, 156, 0)
default_color = Color(0, 0, 0, 1)
antialiased = true

[node name="OutputPort" type="Area2D" parent="OutputX"]
position = Vector2(156, 0)

[node name="Area2D" type="CollisionShape2D" parent="OutputX/OutputPort"]
position = Vector2(-20.457136, 0)
scale = Vector2(1, 2)
shape = SubResource("CircleShape2D_t46qg")

[node name="OutputY" type="Line2D" parent="."]
position = Vector2(0, 81.00001)
scale = Vector2(0.2, 0.107526794)
points = PackedVector2Array(0, 121.49988, 0, 135.24265, 0, 148)
default_color = Color(0, 0, 0, 1)

[node name="OutputPort" type="Area2D" parent="OutputY"]
position = Vector2(0, 148)

[node name="Area2D" type="CollisionShape2D" parent="OutputY/OutputPort"]
scale = Vector2(1.7, 1)
shape = SubResource("CircleShape2D_xldx8")

[node name="Input" type="Line2D" parent="."]
position = Vector2(-89.00001, 0)
scale = Vector2(0.045824017, 0.3)
points = PackedVector2Array(-112, 0, -163, 0)
default_color = Color(0, 0, 0, 1)

[node name="InputPort" type="Area2D" parent="Input"]
position = Vector2(-163, 0)

[node name="Area2D" type="CollisionShape2D" parent="Input/InputPort"]
position = Vector2(-11.580688, 0)
scale = Vector2(1, 2)
shape = SubResource("CircleShape2D_bu7s8")

[node name="Output1" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 107.0
offset_top = -37.0
offset_right = 147.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
text = "Output1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Output2" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 33.0
offset_top = 92.0
offset_right = 73.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 0
text = "Output2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true
